# constata

./: .gitignore  Cargo.toml  README.md  Rocket.toml.example
admin_cli/: Cargo.toml
admin_cli/src/: bin.rs
constata_cli/: Cargo.toml
constata_cli/src/: bin.rs  client.rs  error.rs  lib.rs  queries.rs  runner.rs
constata_cli/src/queries/: account_state.rs  all_attestations_html_export.rs  all_entries_html_export.rs  append_entries_to_issuance.rs  attestation_set_published.rs  attestation_state.rs  create_attestation.rs  create_issuance_from_csv.rs  create_issuance_from_json.rs  custom_graphql.rs  gql_fields.rs  issuance_state.rs  preview_sample_from_issuance.rs  sign_issuance.rs  update_web_callbacks_url.rs  utils.rs  validate_web_callback.rs
constata_lib/: Cargo.toml  claims.json  sqlx-data.json  token.jwt  unverified.json
constata_lib/db/migrations/: 20210128161617_create_bulletins.sql  20210519111800_create_email_callbacks.sql  20210616140742_drop_indexer.sql  20210816175300_add_pubkey_domain_endorsement.sql  20210907104700_create_email_workflows.sql  20211126143000_create_download_proof_links.sql  20211130235700_create_invoices_and_payments.sql  20211216000000_create_invoice_links.sql  20220104151025_add_missing_ids_and_indexes.sql  20220117192400_add_admin_users.sql  20220125000000_add_default_bulletin_id.sql  20220215000000_create_stories.sql  20220302000000_create_terms_acceptance.sql  20220315000000_create_document_watches.sql  20220322000000_change_uniqueness_limit_on_callbacks.sql  20220322170000_forward_snapshots_sequence.sql  20220403010000_add_nonce_to_pubkey.sql  20220415172039_create_missing_callbacks.sql  20220427010000_add_branding_fields_to_person.sql  20220503000000_add_errors_to_certos_request.sql  20220602000000_create_bumps.sql  20220615000000_create_person_deletion.sql  20220624000000_create_email_bot_chat.sql  20220712000000_delete_documents_parked.sql  20220713000000_on_cascade_for_documents.sql  20220718142027_adds_more_keys_to_documents.sql  20220719000000_create_email_credentials_tokens_and_kyc_requests.sql  20220720000000_terms_acceptance_created_at.sql  20220728122628_fix_email_bot_chats_foreign_keys.sql  20220801000000_parked_notification_dates.sql  20220802163738_add_telegram_chat_bot_tables.sql  20220902001841_languages_for_person_and_story.sql  20220902192505_error_log_for_telegram_messages.sql  20220922091958_create_organizations.sql  20221020092421_create_wizard.sql  20221113232930_populate_person_org_id.sql  20221114220717_set_orgs_sequence.sql  20221205154255_create_org_indexes.sql  20221207000000_add_invoice_access_token.sql  20221215000000_add_download_proof_link_access_token.sql  (+18 more)
constata_lib/src/: error.rs  graphql.rs  lib.rs  migrator.rs  signed_payload.rs
constata_lib/src/models/: access_token.rs  account_state.rs  admin_user.rs  admin_user_session.rs  attestation.rs  audit_log.rs  blockchain.rs  btcpay.rs  bulletin.rs  bump.rs  create_email_credentials_token.rs  deletion_reason.rs  document.rs  document_bundle.rs  document_part.rs  document_part_signature.rs  document_source.rs  download_proof_link.rs  email_address.rs  email_bot_chat.rs  email_callback.rs  endorsement.rs  entry.rs  gift.rs  hasher.rs  invoice.rs  invoice_link.rs  issuance.rs  kyc_endorsement.rs  kyc_request.rs  kyc_request_evidence.rs  magic_link.rs  mod.rs  org.rs  org_deletion.rs  outgoing_email_message.rs  outgoing_email_message_kind.rs  parked_reminder.rs  payment.rs  payment_source.rs  (+23 more)
constata_lib/src/test_support/: matchers.rs  mod.rs  private_api_server.rs  public_api_server.rs  test_blockchain.rs  test_db.rs  worker_server.rs
constata_lib/templates/proofs/: _base_64_to_bytes.js.html  _generate_previews.js.html  _macros.html  _utils.js.html  _verify_signature_js.html  style.css
constata_lib/templates/template_builder/: _diploma_base.html
email_bot/: Cargo.toml
email_bot/src/: lib.rs
i18n/: Cargo.toml
i18n/src/: error.rs  lang.rs  lib.rs  localized_response.rs  renderer.rs  translations.rs
i18n/templates/emails/: _account_state.html.en  _account_state.html.es  _bare_layout.html  _footer.html.en  _footer.html.es  _footer_outgoing.html.en  _macros.html.en  _macros.html.es  _public_footer.html.en  _public_footer.html.es  document_was_stamped_for_carbon_copies.html.en  document_was_stamped_for_carbon_copies.html.es  entry_done.html.en  entry_done.html.es
i18n/templates/instant_messages/: account_state.txt.en  account_state.txt.es  document_received.txt.en  document_received.txt.es  group_chat_greeting.txt.en  group_chat_greeting.txt.es  private_chat_document_stamped.txt.en  private_chat_document_stamped.txt.es
i18n/templates/previewer/: html.tera.en  html.tera.es
i18n/templates/proofs/: _definitions.html.en  _utils.js.tera  _verify_signature_js.tera  endorsements.tera.en  endorsements.tera.es  html.tera.en  html.tera.es  signature.tera.en
i18n/templates/public_api/: _layout.html.tera
i18n/templates/template_builder/: _attendance_base.html.tera  (+10 more)
integration_tests/: Cargo.toml  constata_conf_cli.json
integration_tests/src/: lib.rs  selenium.rs
integration_tests/static/: bad_certos_request_unequal_lengths.csv  certos_request.csv  cli_test_issuances_from_csv.csv  issuance.csv
integration_tests/tests/: back_office_panel.rs  cli.rs  delete_parked.rs  proofs.rs  terms_acceptance.rs  web_app_certos.rs  webapp.rs
private_api/: Cargo.toml
private_api/src/: main.rs  test_support.rs
private_api/templates/: index.html
public_api/: .env  Cargo.toml  public_api_queries.graphql  public_api_schema.graphql
public_api/snapshots/: post_document_without_funds.json
public_api/src/: api.rs  bin.rs  controllers.rs  current_person.rs  export_graphql_definitions.rs  lib.rs  main.rs  test_support.rs
public_api/static/: style.css
stamper/: Cargo.toml
stamper/src/: signer.rs  wallet_setup.rs
static_site/: Cargo.toml
static_site/src/: bin.rs  config.rs  development.rs  error.rs  server.rs
static_site/templates/: _base_layout.html
telegram_bot/: Cargo.toml
telegram_bot/src/: lib.rs
worker/: Cargo.toml
worker/src/: bin.rs
(+584 files in other folders)
