[package]
name = "email_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
constata_lib = { path = "../constata_lib" }
google-gmail1 = "2.0.8"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
tokio = { version = "^ 1.0", features = ["full"] }
dialoguer = "0.8.0"
clap = "2.33.3"
thiserror = "1.0"
mailparse = "0.13.3"
sqlx = { version = "0.6.0", features = [ "postgres", "runtime-tokio-native-tls", "offline", "chrono", "json" ] }
chrono = { version = "0.4", features = ["serde"] }
lettre = { git = "https://github.com/lettre/lettre" }
base64 = "0.13.0"
log = "*"
i18n = { path = "../i18n" }

[dev-dependencies]
galvanic-test = "0.2"
galvanic-assert = "0.8.7"
constata_lib = { path = "../constata_lib", features = ["test_support"] }
bitcoin = "*"

[lib]
name = "email_bot"
path = "src/lib.rs"
