[package]
name = "private_api"
version = "0.1.0"
authors = ["nubis <nubis@constata.eu>"]
edition = "2021"

[dependencies]
constata_lib = { path = "../constata_lib" }
serde = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
futures = "0.3.4"
actix-web = "3"
rust_decimal = "*"
rust_decimal_macros = "*"
galvanic-test = "0.2"
galvanic-assert = { version = "0.8.7", optional = true }
google-authenticator = "0.3.0"
rand = "0.6.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
sqlx-models-orm = "0.1.6"
juniper = { git = "https://github.com/constata-eu/juniper.git", features = ["chrono"]}
juniper_rocket = { git = "https://github.com/constata-eu/juniper.git" }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dev-dependencies]
constata_lib = { path = "../constata_lib", features = ["test_support"] }
tokio = { version = "1.2.0", features = ["full"] }
anyhow = "*"
