[package]
name = "static_site"
version = "0.1.0"
authors = ["nubis <nubis@constata.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i18n = { path = "../i18n" }
serde = "1.0"
serde_json = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
include_dir = { version="*", features= ["glob"]}
thiserror = "1.0"
ex = "0.1.3"
lazy_static = "1.4.0"
log = "0.4.0"

[[bin]]
name = "static_site"
path = "src/bin.rs"

[[bin]]
name = "development_site"
path = "src/development.rs"
