[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
constata_lib = { path = "../constata_lib" }
teloxide-core = "0.7"
tokio = { version = "^ 1.0", features = ["full"] }
sqlx = { version = "0.6.0", features = [ "postgres", "runtime-tokio-native-tls", "offline", "chrono", "json" ] }
log = "*"
thiserror = "1.0"
serde = "^1.0"
serde_json = "^1.0"
i18n = { path = "../i18n" }

[dev-dependencies]
galvanic-test = "0.2"
galvanic-assert = "0.8.7"
constata_lib = { path = "../constata_lib", features = ["test_support"] }
bitcoin = "*"
rust-tdlib = "*"
chrono = "*"
time-test = { version = "0.2.2" }

[lib]
name = "telegram_bot"
path = "src/lib.rs"
