[package]
name = "worker"
version = "0.1.0"
authors = ["nubis <nubis@constata.eu>"]
edition = "2021"

[dependencies]
constata_lib = { path = "../constata_lib" }
email_bot = { path = "../email_bot" }
dialoguer = "0.8.0"
tokio = { version = "1.2.0", features = ["full"] }
bitcoin-wallet = { git = "https://github.com/rust-bitcoin/rust-wallet" }
clap = "2.33.3"
log = "*"
futures = "*"
anyhow = "*"

[dev-dependencies]
anyhow = "*"

[dependencies.bitcoin]
version = "0.26.0"
features = ["base64"]

[[bin]]
name = "worker"
path = "src/bin.rs"

